--- a/biblio.bib
+++ b/biblio.bib
@@ -1,3 +1,8 @@
+@MISC{BLAST,
+ title={Basic Local Alignment Search Tools},
+ howpublished={\url{http://blast.ncbi.nlm.nih.gov/Blast.cgi}},
+ key = {Basic Local Alignment Search Tools},
+}
 
 @INPROCEEDINGS{1542747, 
 author={Hui Li and Groep, D. and Wolters, L.}, 
